--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						<a href="#"><img src="/img/modern-white.png" alt="" width="180"></a>
 						<p style="padding: 0 10px; color: #ffffff;">Modern HTML Email</p>
 						<p style="padding: 0 10px; color: #ffffff;">123 Street Road, State 55555</p>
-						<a href="#"><img src="/img/white-facebook.png" alt="" width="30"></a>
+						<a href="#"><img src="/img/white-facebook.png" alt="Icon" width="30"></a>
 						<a href="#"><img src="/img/white-twitter.png" alt="" width="30"></a>
 						<a href="#"><img src="/img/white-youtube.png" alt="" width="30"></a>
 						<a href="#"><img src="/img/white-linkedin.png" alt="" width="30"></a>
